i think i solved horizontal overflow problem!

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -10,7 +10,6 @@
         }
 
         h2 {
-            // margin: 10px 0px 10px 0px;
             margin-left: 20px;
         }
 
@@ -33,6 +32,10 @@
         .logo {
             padding: 0px 10px 30px 10px;
         }
+}
+
+#msb-footer-container {
+    width: 100%;
 }
 
 #footer-line {
