--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -15,7 +15,6 @@
 
 #main-content-info {
     margin: 40px 20px 40px 20px;
-    width: 100vw;
 
     @media screen and (min-width: 768px) {
     display: flex;
